tests/positive/basic/temp_path_unique/input.ci
void main(string[] args) {
    string a = tempPath();
    string b = tempPath();
    print(toString(fileExists(a)) + "\n");
    print(toString(a != b) + "\n");
}
