tests/negative/runtime/exec_command_not_found/input.ci
void main() {
    ExecResult r = exec(["no_such_cmd_xyz"], []);
    print(toString(execStatus(r)) + "\n");
}
